# avs_pkcs7_parse_sample

./: .gitignore  CMakeLists.txt  README.md  prj.conf  sample.yaml
data/: bad.pkcs7.der  good.pkcs7.der
src/: main.c
src/tls_config/: user-tls-conf.h
